tests/neg-custom-args/safe-init/constant.scala
class A {
  final val a = b
  final val b = 4

  val c = d         // error
  val d: Int = 5
}